# oneflow

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  THIRD-PARTY-NOTICES.md  compose.yaml
apps/api/: .env.example  .gitignore  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py  0002_comments_activities.py  0003_time_tracking.py  0004_cost_tracking.py  0005_milestones.py  0006_notifications.py  0007_saved_filters.py  0008_project_statuses.py  0009_automation_rules.py  0011_documents.py  (+111 more)
apps/api/app/: main.py  openapi_export.py  seed.py
apps/api/tests/: conftest.py  test_access_tokens.py  test_action_item_convert.py  test_activity_filters.py  test_admin_worklogs.py  test_ai.py  test_assignment_history.py  test_attachment_anchors.py  test_attachment_search.py  test_attachments.py  test_auth_assistance.py  test_auth_config.py  test_auth_modes.py  test_authz_matrix.py  test_automation_and_condition.py  test_automation_edit_audit.py  test_automation_rule_order.py  test_automation_rules.py  test_automation_runs.py  test_automation_set_assignee.py  test_collation.py  test_comment_mentions.py  test_comment_reactions.py  test_comment_threads.py  test_comments.py  test_config_guards.py  test_constraint_names.py  test_cost_entries.py  test_csv_io.py  test_custom_field_columns.py  test_custom_field_filter.py  test_custom_fields.py  test_customers.py  test_cycle_burndown.py  test_cycle_rollover.py  test_cycles.py  test_dashboard.py  test_dashboard_layout.py  test_data_transfers.py  test_dates.py  (+82 more)
(+586 files in other folders)
