[project]
name = "oneflow-api"
version = "0.1.0"
description = "OneFlow project management system — FastAPI backend"
requires-python = ">=3.12"
license = "Proprietary"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "greenlet>=3.0",
    "nh3>=0.3.6",
    "httpx>=0.27,<1",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-randomly>=3.15",
    "trustme>=1.2",
    "ruff>=0.5",
    "pip-licenses>=4.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["B008"]  # FastAPI Depends() in defaults is idiomatic

[tool.uv]
package = false
